Temporary commit of all changes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
+cmake_minimum_required(VERSION 3.10)
 
 project(Halide)
-cmake_minimum_required(VERSION 3.3)
+
+cmake_policy(SET CMP0075 NEW)
 
 set(HALIDE_BASE_DIR   "${CMAKE_CURRENT_SOURCE_DIR}")
 
@@ -109,16 +111,21 @@ else()
   set(CMAKE_CXX_STANDARD 11)
 endif()
 
-string(FIND "${LLVM_CONFIG_CXXFLAGS}" "-stdlib=libc++" LLVM_LIBCXX)
-if (LLVM_LIBCXX GREATER -1)
-  add_compile_options(-stdlib=libc++)
-  if(COMMAND add_link_options)
-    add_link_options(-stdlib=libc++)
-  else()
-    set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -stdlib=libc++")
-    set(CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS} -stdlib=libc++")
-    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -stdlib=libc++")
-  endif()
+if (NOT APPLE)
+    string(FIND "${LLVM_CONFIG_CXXFLAGS}" "-stdlib=libc++" LLVM_LIBCXX)
+    if (LLVM_LIBCXX GREATER -1)
+      add_compile_options(-stdlib=libc++)
+      if(COMMAND add_link_options)
+        add_link_options(-stdlib=libc++)
+      else()
+        set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -stdlib=libc++")
+        set(CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS} -stdlib=libc++")
+        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -stdlib=libc++")
+      endif()
+    endif()
+else()
+    add_compile_options(-DACCELERATE_NEW_LAPACK)
+    add_compile_options(-DACCELERATE_LAPACK_ILP64)
 endif()
 
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -160,8 +167,8 @@ endif()
 if (LLVM_VERSION LESS 80)
   message(FATAL_ERROR "LLVM version must be 8.0 or newer")
 endif()
-if (LLVM_VERSION GREATER 100)
-  message(FATAL_ERROR "LLVM version must be 10.0 or older")
+if (LLVM_VERSION GREATER 190)
+  message(FATAL_ERROR "LLVM version must be 19.0 or older")
 endif()
 
 function(check_llvm_target TARGET HAS_TARGET)
@@ -184,24 +191,30 @@ check_llvm_target(X86 WITH_X86)
 check_llvm_target(ARM WITH_ARM)
 check_llvm_target(AArch64 WITH_AARCH64)
 check_llvm_target(Hexagon WITH_HEXAGON 40)
+check_llvm_target(LoongArch WITH_LOONGARCH)
 check_llvm_target(Mips WITH_MIPS)
 check_llvm_target(PowerPC WITH_POWERPC)
 check_llvm_target(NVPTX WITH_NVPTX)
 check_llvm_target(RISCV WITH_RISCV)
+check_llvm_target(VE WITH_VE)
 # AMDGPU target is WIP
 check_llvm_target(AMDGPU WITH_AMDGPU)
+check_llvm_target(WebAssembly WITH_WEBASSEMBLY)
 
 option(TARGET_NATIVE_CLIENT "Include Native Client" OFF)
 option(TARGET_X86 "Include x86 target" ${WITH_X86})
 option(TARGET_ARM "Include ARM target" ${WITH_ARM})
 option(TARGET_AARCH64 "Include AARCH64 (arm64) target" ${WITH_AARCH64})
 option(TARGET_HEXAGON "Include Hexagon target" ${WITH_HEXAGON})
+option(TARGET_LOONGARCH "Include LoongArch target" ${WITH_LOONGARCH})
 option(TARGET_METAL "Include Metal target" ON)
 option(TARGET_MIPS "Include MIPS target" ${WITH_MIPS})
 option(TARGET_POWERPC "Include POWERPC target" ${WITH_POWERPC})
 option(TARGET_PTX "Include PTX target" ${WITH_NVPTX})
 option(TARGET_AMDGPU "Include AMDGPU target" ${WITH_AMDGPU})
 option(TARGET_RISCV "Include RISCV target" ${WITH_RISCV})
+option(TARGET_VE "Include NEC VE target" ${WITH_VE})
+option(TARGET_WEBASSEMBLY "Include WebAssembly target" ${WITH_WEBASSEMBLY})
 option(TARGET_OPENCL "Include OpenCL-C target" ON)
 option(TARGET_OPENGL "Include OpenGL/GLSL target" ON)
 option(TARGET_OPENGLCOMPUTE "Include OpenGLCompute target" ON)
@@ -262,6 +275,7 @@ endif()
 if (NOT MSVC)
   add_compile_options(-Wall
                       -Wno-unused-function
+                      -Wno-unused-variable
                       -Wcast-qual
                       -Woverloaded-virtual
                       -Wignored-qualifiers)
